--- a/apps/aptosmodule/tsconfig.json
+++ b/apps/aptosmodule/tsconfig.json
@@ -2,6 +2,8 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Default",
   "compilerOptions": {
+    "target": "ES6",
+    "lib": ["DOM", "ES6", "DOM.Iterable", "ScriptHost", "ES2016.Array.Include"],
     "composite": false,
     "declaration": true,
     "declarationMap": true,
@@ -14,7 +16,8 @@
     "noUnusedParameters": false,
     "preserveWatchOutput": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "jsx": "react-jsx"
   },
   "exclude": ["node_modules"]
 }
