--- a/packages/aptoswarkade/package.json
+++ b/packages/aptoswarkade/package.json
@@ -69,6 +69,7 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^9.1.2",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
