--- a/apps/aptosmodule/package.json
+++ b/apps/aptosmodule/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "aptoswarkade": "file:../../packages/aptoswarkade",
+    "aptos-warkade": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
