--- a/packages/aptoswarkade/package.json
+++ b/packages/aptoswarkade/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aptos-warkade",
+  "name": "aptoswarcade",
   "version": "0.1.8",
   "description":"Aptos Warkade",
   "type":"commonjs",
